--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-contacts.xcodeproj/xcuserdata
-contacts.xcodeproj/project.xcworkspace/xcuserdata
+contacts_swiftUI.xcodeproj/xcuserdata
+contacts_swiftUI.xcodeproj/project.xcworkspace/xcuserdata
 *.DS_Store
